# mappings-explorer

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json  test.yaml
.github/actions/add_tags/: README.md  action.yml  index.js  package-lock.json  package.json
.github/workflows/: build-preview.yml  build-web.yml  build_web.yml  delete-web-preview.yml  python-test.yml  python_test.yml  python_test_cli.yml  python_test_explorer.yml  release-please.yml
docs/: ADD_FRAMEWORKS.md
legacy/: m365-12.11.2023_attack-14.1-enterprise_E3_navigator_layers.json  m365-12.11.2023_attack-14.1-enterprise_E5_navigator_layers.json
make/: python.mk
mappings/: Att&ckToCveMappings.csv
mappings/NIST_800-53/: attack-10-1-to-nist800-53-r4-mappings.tsv  attack-10-1-to-nist800-53-r5-mappings.tsv
mappings/aws/9.0/: aws_attack-9.0.json
mappings/cve/: cve-21.10.21_attack-9.0.json  cve_attack-9.0.json
mappings/cve/9.0/: cve_attack-9.0.json
mappings/gcp/: GCP-22.06.28_attack-10.json
mappings/gcp/10.0/: gcp_attack-10.0.json
mappings/security_stack/AWS/: AWS-21.09.21_attack-9.json  AWS_attack-9.json
mappings/security_stack/Azure/: Azure-21.06.29_attack-8.2.json  Azure_attack-8.2.json
mappings/security_stack/GCP/: GCP-22.06.28_attack-10.json  GCP_attack-10.json
mappings/veris/1.3.5/: veris-1.3.5_attack-9.0.json
mappings/veris/1.3.7/: veris-1.3.7_attack-12.1.json
old scripts/data/schema/: mapex-unified-data-schema.json
old scripts/data/tests/: test_mapex_cli.py  test_mapex_convert_cli.py
output/: external-landing.html  index.html  nist-landing.html  veris-landing.html
parsed_mappings/veris/1.3.5/: parsed_veris-mappings.json
parsed_mappings/veris/1.3.7/: parsed_veris-1_3_7-mappings-mobile.json
schema/: mapex-unified-data-schema.json
src/: README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
src/assets/css/: main.css
src/cli/: README.md  cli.py  pyproject.toml  tasks.py
src/cli/mappings/NIST_800-53/: attack-9-0-to-nist800-53-r4-mappings.tsv
src/cli/mappings_cli/: __init__.py
src/cli/tests/: test_init.py
src/components/: CallToAction.vue  Footer.vue  FrameworksGraphic.vue  Header.vue  ListGraphic.vue  UserStoriesAccordion.vue
src/explorer/: README.md  pyproject.toml  tasks.py
src/layouts/: default.vue
src/mapex/: cli.py  write_parsed_mappings.py
src/mapex/cve/: cve_attack-9.0.csv  (+6 more)
src/mapex_convert/: cli.py  parse_cve_mappings.py  parse_nist_mappings.py  parse_security_stack_mappings.py  parse_veris_mappings.py
src/mappings_explorer/: __init__.py  attack_query.py  attack_setup.py  cli.py  framework_setup.py  site_builder.py  template.py
src/pages/: index.vue
src/public/: frameworks.json
src/tests/: test_cli.py
src/tools/: build_mappings.py
templates/: _banner.html.j2  _footer.html.j2  _mappings_project_section.html.j2  _navigation.html.j2  base.html.j2  external-control.html.j2  landing.html.j2
templates/static/: main.css  main.js
tests/: expected_results.py  parsers.py  test_cli.py  test_init.py  test_mapex_cli.py  test_mapex_convert_cli.py
tests/expected_results/: expected_csv_results.csv  expected_csv_results_attack_objects.csv  expected_csv_results_metadata.csv  expected_excel_results.xlsx  expected_results_json.py  expected_results_navigator_layer.py  expected_results_stix.py  expected_results_yaml.py
tests/files/: parsed_mappings.json  test.csv  test.json
(+1590 files in other folders)
