[tool.poetry]
name = "mappings-explorer"
version = "1.0.0"
description = "TODO"
authors = [
    "TODO <todo@mitre.org>",
]
packages = [
    { include = "mappings_explorer", from = "src" },
]
license = "Apache"

[tool.poetry.scripts]
mapex = "mappings_explorer.cli.cli:main"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.0"
black = "^22.3.0"
bumpver = "^2022.1119"
pytest = "^7.1.2"
pytest-cov = "2.11.1"
safety = "1.10.3"
isort = "^5.12.0"
mypy = "^1.2.0"
pandas = "^2.1"
openpyxl = "^3.1"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "v1.0.0"
version_pattern = "vMAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true

[tool.bumpver.file_patterns]
# pep440_version does not have the "v" prefix
"pyproject.toml" = [
    'version = "{pep440_version}"',
]
"src/mappings_explorer/__init__.py" = [
    'version = "{pep440_version}"',
]

[tool.isort]
profile = "black"
skip_gitignore = true
