[tool.poetry]
name = "mappings-explorer"
version = "0.0.0"
description = "A CLI to build the ATT&CK Mappings Explorer."
authors = ["TODO <todo@mitre.org>"]
packages = [
             { include = "mappings_explorer", from="./src" },
             { include = "mapex_convert", from="./src" },
             { include = "mapex", from="./src" }
           ]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
repository = "https://github.com/center-for-threat-informed-defense/mappings-explorer"

[tool.poetry.scripts]
build-mappings-explorer = "mappings_explorer.site_builder:main"
mapex = "mapex.cli:main"
mapex-convert = "mapex_convert.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pandas-stubs = "^2.0.3.230814"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.6"

[tool.poetry.group.dev.dependencies]
bandit = "1.7.0"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "4.1.0"
safety = "1.10.3"
mypy = "^1.2.0"
pandas = "^2.1"
openpyxl = "^3.1"
ruff = "^0.0.289"
jinja2 = "^3.1.2"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
